--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,9 @@ dependencies {
     compile libraries.tinyDancer
     compile libraries.lynx
     compile libraries.processPhoenix
+    compile libraries.supportConstraintLayout
+    compile libraries.flexLayout
+
 
     testCompile libraries.junit
     testCompile libraries.robolectric
