--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,10 +7,11 @@ ext.versions = [
         compileSdk                   : 23,
         buildTools                   : '23.0.3',
 
-        androidGradlePlugin          : '2.2.0-alpha4',
+        androidGradlePlugin          : '2.1.2',
         aptGradlePlugin              : '1.8',
         retrolambdaGradlePlugin      : '3.2.5',
         lombokGradlePlugin           : '0.2.3.a2',
+        paperworkGradlePlugin        : '1.2.7',
         jacocoGradlePlugin           : '0.7.6.201602180812',
         androidDevMetricsGradlePlugin: '0.4',
         errorProneVersion            : '0.0.8',
@@ -20,7 +21,7 @@ ext.versions = [
 
         dagger                       : '2.4',
 
-        supportLibs                  : '23.4.0',
+        supportLibs                  : '23.1.1',
         butterKnife                  : '8.0.1',
         timber                       : '4.1.2',
 
@@ -44,6 +45,7 @@ ext.gradlePlugins = [
         apt              : "com.neenbedankt.gradle.plugins:android-apt:$versions.aptGradlePlugin",
         retrolambda      : "me.tatarka:gradle-retrolambda:$versions.retrolambdaGradlePlugin",
         lombok           : "me.tatarka.retrolambda.projectlombok:lombok.ast:$versions.lombokGradlePlugin",
+        paperwork        : "hu.supercluster:paperwork-plugin:$versions.paperworkGradlePlugin",
         jacoco           : "org.jacoco:org.jacoco.core:$versions.jacocoGradlePlugin",
         androidDevMetrics: "com.frogermcs.androiddevmetrics:androiddevmetrics-plugin:$versions.androidDevMetricsGradlePlugin",
         errorProne       : "net.ltgt.gradle:gradle-errorprone-plugin:$versions.errorProneVersion",
@@ -71,6 +73,7 @@ ext.libraries = [
         stetho                  : "com.facebook.stetho:stetho:$versions.stetho",
         leakCanary              : "com.squareup.leakcanary:leakcanary-android:$versions.leakCanary",
         tinyDancer              : "com.github.brianPlummer:tinydancer:$versions.tinyDancer",
+        paperwork               : "hu.supercluster:paperwork:$versions.paperworkGradlePlugin",
         lynx                    : "com.github.pedrovgs:lynx:$versions.lynx",
         devMetricsNoOp          : "com.frogermcs.androiddevmetrics:androiddevmetrics-runtime-noop:$versions.androidDevMetricsGradlePlugin",
         processPhoenix          : "com.jakewharton:process-phoenix:$versions.processPhoenix",
