--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,7 @@ ext.versions = [
         compileSdk                   : 23,
         buildTools                   : '23.0.3',
 
-        androidGradlePlugin          : '2.2.0-alpha4',
+        androidGradlePlugin          : '2.2.0-alpha5',
         aptGradlePlugin              : '1.8',
         retrolambdaGradlePlugin      : '3.2.5',
         lombokGradlePlugin           : '0.2.3.a2',
@@ -21,6 +21,8 @@ ext.versions = [
         dagger                       : '2.4',
 
         supportLibs                  : '23.4.0',
+        supportConstraint            : '1.0.0-alpha4',
+        flexbox                      : '0.2.2',
         butterKnife                  : '8.0.1',
         timber                       : '4.1.2',
 
@@ -62,6 +64,9 @@ ext.libraries = [
         supportDesign           : "com.android.support:design:$versions.supportLibs",
         supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
+        supportConstraint       : "com.android.support.constraint:constraint-layout:$versions.supportConstraint",
+
+        flexbox                 : "com.google.android:flexbox:$versions.flexbox",
 
         butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
         butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
