--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -62,8 +62,9 @@ ext.libraries = [
         supportDesign           : "com.android.support:design:$versions.supportLibs",
         supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
-        supportConstraintLayout : "com.android.support.constraint:constraint-layout:1.0.0-alpha1",
+        supportConstraintLayout : "com.android.support.constraint:constraint-layout:1.0.0-alpha4",
         flexLayout              : "com.github.mmin18:flexlayout:1.2.4",
+        flexBoxLayout           : "com.google.android:flexbox:0.2.2",
 
         butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
         butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
