media buttonslayout using relative, contstraint, flex, table;

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,8 @@ dependencies {
     compile libraries.supportDesign
     compile libraries.supportRecyclerView
     compile libraries.supportCardView
+    compile libraries.supportConstraintLayout
+    compile libraries.flexbox
 
     compile libraries.butterKnife
     apt libraries.butterKnifeCompiler
