--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,8 @@ dependencies {
         exclude module: 'recyclerview-v7'
         exclude module: 'support-v4'
     }
+
+    compile 'com.google.android:flexbox:0.2.2'
 }
 
 configurations.all {
