--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,7 @@ ext.versions = [
         compileSdk                   : 23,
         buildTools                   : '23.0.3',
 
-        androidGradlePlugin          : '2.2.0-alpha4',
+        androidGradlePlugin          : '2.1.2',
         aptGradlePlugin              : '1.8',
         retrolambdaGradlePlugin      : '3.2.5',
         lombokGradlePlugin           : '0.2.3.a2',
@@ -19,6 +19,8 @@ ext.versions = [
         versionsGradlePlugin         : '0.13.0',
 
         dagger                       : '2.4',
+        flexboxLayout                : '0.2.2',
+        constraintLayout             : '1.0.0-alpha4',
 
         supportLibs                  : '23.4.0',
         butterKnife                  : '8.0.1',
@@ -56,6 +58,8 @@ ext.libraries = [
         daggerCompiler          : "com.google.dagger:dagger-compiler:$versions.dagger",
 
         autoValue               : "com.google.auto.value:auto-value:$versions.autoValue",
+        flexboxLayout           : "com.google.android:flexbox:$versions.flexboxLayout",
+        constraintLayout        : "com.android.support.constraint:constraint-layout:$versions.constraintLayout",
 
         supportAnnotations      : "com.android.support:support-annotations:$versions.supportLibs",
         supportAppCompat        : "com.android.support:appcompat-v7:$versions.supportLibs",
