--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     compile libraries.supportDesign
     compile libraries.supportRecyclerView
     compile libraries.supportCardView
+    compile libraries.supportConstraintLayout
 
     compile libraries.butterKnife
     apt libraries.butterKnifeCompiler
