--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,6 +21,7 @@ ext.versions = [
         dagger                       : '2.4',
 
         supportLibs                  : '23.4.0',
+        supportConstraintLayout      : '1.0.0-alpha4',
         butterKnife                  : '8.0.1',
         timber                       : '4.1.2',
 
@@ -62,6 +63,7 @@ ext.libraries = [
         supportDesign           : "com.android.support:design:$versions.supportLibs",
         supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
+        supportConstraintLayout : "com.android.support.constraint:constraint-layout:$versions.supportConstraintLayout",
 
         butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
         butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
