--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,6 +22,7 @@ ext.versions = [
 
         supportLibs                  : '23.4.0',
         supportConstraintLayout      : '1.0.0-alpha4',
+        flexboxLayout                : '0.2.2',
         butterKnife                  : '8.0.1',
         timber                       : '4.1.2',
 
@@ -64,6 +65,7 @@ ext.libraries = [
         supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
         supportConstraintLayout : "com.android.support.constraint:constraint-layout:$versions.supportConstraintLayout",
+        flexboxLayout           : "com.google.android:flexbox:$versions.flexboxLayout",
 
         butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
         butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
