--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,9 @@ dependencies {
     compile libraries.lynx
     compile libraries.processPhoenix
 
+    compile libraries.supportConstraintLayout
+    compile libraries.flexbox
+
     testCompile libraries.junit
     testCompile libraries.robolectric
     testCompile libraries.assertJ
