--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,7 @@ ext.versions = [
         compileSdk                   : 23,
         buildTools                   : '23.0.3',
 
-        androidGradlePlugin          : '2.2.0-alpha4',
+        androidGradlePlugin          : '2.2.0-alpha6',
         aptGradlePlugin              : '1.8',
         retrolambdaGradlePlugin      : '3.2.5',
         lombokGradlePlugin           : '0.2.3.a2',
@@ -30,6 +30,9 @@ ext.versions = [
         tinyDancer                   : '0.0.8',
         lynx                         : '1.6',
         processPhoenix               : '1.0.2',
+
+        constraintLayout             : '1.0.0-alpha4',
+        flexbox                      : '0.2.2',
 
         junit                        : '4.12',
         robolectric                  : '3.0',
@@ -62,6 +65,9 @@ ext.libraries = [
         supportDesign           : "com.android.support:design:$versions.supportLibs",
         supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
+
+        supportConstraintLayout : "com.android.support.constraint:constraint-layout:$versions.constraintLayout",
+        flexbox                 : "com.google.android:flexbox:$versions.flexbox",
 
         butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
         butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
