--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
         // Make generated apks contain version name and code.
         archivesBaseName = "app-${versions.name}-${versions.code}"
+        //vectorDrawables.useSupportLibrary = true
     }
 
     compileOptions {
@@ -121,6 +122,8 @@ dependencies {
         exclude module: 'recyclerview-v7'
         exclude module: 'support-v4'
     }
+    compile'com.android.support.constraint:constraint-layout:1.0.0+'
+    compile 'com.google.android:flexbox:0.2.2'
 }
 
 configurations.all {
