--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     compile libraries.supportDesign
     compile libraries.supportRecyclerView
     compile libraries.supportCardView
+    compile libraries.supportConstraint
+
+    compile libraries.flexBox
 
     compile libraries.butterKnife
     apt libraries.butterKnifeCompiler
