--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -62,6 +62,7 @@ ext.libraries = [
         supportDesign           : "com.android.support:design:$versions.supportLibs",
         supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
+        supportGrid             : "com.android.support:gridlayout-v7:$versions.supportLibs",
         supportConstraint       : "com.android.support.constraint:constraint-layout:1.0.0-alpha4",
 
         flexBox                 : "com.google.android:flexbox:0.2.2",
