--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,8 @@ dependencies {
         exclude module: 'recyclerview-v7'
         exclude module: 'support-v4'
     }
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
+    compile 'com.google.android:flexbox:0.2.2'
 }
 
 configurations.all {
