--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,8 @@ dependencies {
     compile libraries.leakCanary
     compile libraries.tinyDancer
     compile libraries.lynx
+    compile 'com.google.android:flexbox:0.2.2'
+    compile'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
     compile libraries.processPhoenix
 
     testCompile libraries.junit
