Relative, table, constraint and flex layout implementations.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,10 @@ dependencies {
     compile libraries.lynx
     compile libraries.processPhoenix
 
+
+    compile libraries.constraintLayout
+    compile libraries.flexboxLayout
+
     testCompile libraries.junit
     testCompile libraries.robolectric
     testCompile libraries.assertJ
