--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,8 @@ dependencies {
     compile libraries.supportDesign
     compile libraries.supportRecyclerView
     compile libraries.supportCardView
+    compile 'com.google.android:flexbox:0.2.2'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
 
     compile libraries.butterKnife
     apt libraries.butterKnifeCompiler
