--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,6 +23,7 @@ ext.versions = [
         supportLibs                  : '23.4.0',
         butterKnife                  : '8.0.1',
         timber                       : '4.1.2',
+        supportConstraintLayout      : '1.0.0-alpha1',
 
         espresso                     : '2.2.1',
         stetho                       : '1.3.1',
@@ -62,6 +63,8 @@ ext.libraries = [
         supportDesign           : "com.android.support:design:$versions.supportLibs",
         supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
+
+        supportConstraintLayout : "com.android.support.constraint:constraint-layout:$versions.supportConstraintLayout",
 
         butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
         butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
