--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,6 +24,7 @@ ext.versions = [
         butterKnife                  : '8.0.1',
         timber                       : '4.1.2',
         supportConstraintLayout      : '1.0.0-alpha1',
+        flexbox                      : '0.2.2',
 
         espresso                     : '2.2.1',
         stetho                       : '1.3.1',
@@ -65,6 +66,7 @@ ext.libraries = [
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
 
         supportConstraintLayout : "com.android.support.constraint:constraint-layout:$versions.supportConstraintLayout",
+        flexbox                 : "com.google.android:flexbox:$versions.flexbox",
 
         butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
         butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
