--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,7 @@ dependencies {
     }
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
     compile 'com.google.android:flexbox:0.2.2'
+    compile 'com.github.romainguy:viewserver:017c01cd512cac3ec054d9eee05fc48c5a9d2de'
 }
 
 configurations.all {
