--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 
     // Workaround to prevent Gradle from stealing focus from other apps during tests run/etc.
