--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,6 +23,8 @@ ext.versions = [
         supportLibs                  : '23.4.0',
         butterKnife                  : '8.0.1',
         timber                       : '4.1.2',
+        constraintLayout             : '1.0.0-alpha3',
+        flexbox                      : '0.2.2',
 
         espresso                     : '2.2.1',
         stetho                       : '1.3.1',
@@ -30,6 +32,7 @@ ext.versions = [
         tinyDancer                   : '0.0.8',
         lynx                         : '1.6',
         processPhoenix               : '1.0.2',
+        viewServer                   : '017c01cd51',
 
         junit                        : '4.12',
         robolectric                  : '3.0',
@@ -52,37 +55,40 @@ ext.gradlePlugins = [
 ]
 
 ext.libraries = [
-        dagger                  : "com.google.dagger:dagger:$versions.dagger",
-        daggerCompiler          : "com.google.dagger:dagger-compiler:$versions.dagger",
+        dagger             : "com.google.dagger:dagger:$versions.dagger",
+        daggerCompiler     : "com.google.dagger:dagger-compiler:$versions.dagger",
 
-        autoValue               : "com.google.auto.value:auto-value:$versions.autoValue",
+        autoValue          : "com.google.auto.value:auto-value:$versions.autoValue",
 
-        supportAnnotations      : "com.android.support:support-annotations:$versions.supportLibs",
-        supportAppCompat        : "com.android.support:appcompat-v7:$versions.supportLibs",
-        supportDesign           : "com.android.support:design:$versions.supportLibs",
-        supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
-        supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
+        supportAnnotations : "com.android.support:support-annotations:$versions.supportLibs",
+        supportAppCompat   : "com.android.support:appcompat-v7:$versions.supportLibs",
+        supportDesign      : "com.android.support:design:$versions.supportLibs",
+        supportRecyclerView: "com.android.support:recyclerview-v7:$versions.supportLibs",
+        supportCardView    : "com.android.support:cardview-v7:$versions.supportLibs",
+        constraintLayout   : "com.android.support.constraint:constraint-layout:$versions.constraintLayout",
+        flexboxLayout      : "com.google.android:flexbox:$versions.flexbox",
 
-        butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
-        butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
-        timber                  : "com.jakewharton.timber:timber:$versions.timber",
+        butterKnife        : "com.jakewharton:butterknife:$versions.butterKnife",
+        butterKnifeCompiler: "com.jakewharton:butterknife-compiler:$versions.butterKnife",
+        timber             : "com.jakewharton.timber:timber:$versions.timber",
+        viewServer         : "com.github.romainguy:ViewServer:$versions.viewServer",
 
         // Developer Tools
-        stetho                  : "com.facebook.stetho:stetho:$versions.stetho",
-        leakCanary              : "com.squareup.leakcanary:leakcanary-android:$versions.leakCanary",
-        tinyDancer              : "com.github.brianPlummer:tinydancer:$versions.tinyDancer",
-        lynx                    : "com.github.pedrovgs:lynx:$versions.lynx",
-        devMetricsNoOp          : "com.frogermcs.androiddevmetrics:androiddevmetrics-runtime-noop:$versions.androidDevMetricsGradlePlugin",
-        processPhoenix          : "com.jakewharton:process-phoenix:$versions.processPhoenix",
+        stetho             : "com.facebook.stetho:stetho:$versions.stetho",
+        leakCanary         : "com.squareup.leakcanary:leakcanary-android:$versions.leakCanary",
+        tinyDancer         : "com.github.brianPlummer:tinydancer:$versions.tinyDancer",
+        lynx               : "com.github.pedrovgs:lynx:$versions.lynx",
+        devMetricsNoOp     : "com.frogermcs.androiddevmetrics:androiddevmetrics-runtime-noop:$versions.androidDevMetricsGradlePlugin",
+        processPhoenix     : "com.jakewharton:process-phoenix:$versions.processPhoenix",
 
         // Test dependencies
-        junit                   : "junit:junit:$versions.junit",
-        robolectric             : "org.robolectric:robolectric:$versions.robolectric",
-        assertJ                 : "org.assertj:assertj-core:$versions.assertJ",
-        equalsVerifier          : "nl.jqno.equalsverifier:equalsverifier:$versions.equalsVerifier",
-        mockitoCore             : "org.mockito:mockito-core:$versions.mockito",
-        supportTestRunner       : "com.android.support.test:runner:$versions.supportTestRunner",
-        supportTestRules        : "com.android.support.test:rules:$versions.supportTestRunner",
-        espressoCore            : "com.android.support.test.espresso:espresso-core:$versions.espresso",
-        espressoContrib         : "com.android.support.test.espresso:espresso-contrib:$versions.espresso",
+        junit              : "junit:junit:$versions.junit",
+        robolectric        : "org.robolectric:robolectric:$versions.robolectric",
+        assertJ            : "org.assertj:assertj-core:$versions.assertJ",
+        equalsVerifier     : "nl.jqno.equalsverifier:equalsverifier:$versions.equalsVerifier",
+        mockitoCore        : "org.mockito:mockito-core:$versions.mockito",
+        supportTestRunner  : "com.android.support.test:runner:$versions.supportTestRunner",
+        supportTestRules   : "com.android.support.test:rules:$versions.supportTestRunner",
+        espressoCore       : "com.android.support.test.espresso:espresso-core:$versions.espresso",
+        espressoContrib    : "com.android.support.test.espresso:espresso-contrib:$versions.espresso",
 ]
