--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -38,7 +38,8 @@ ext.versions = [
         mockito                      : '1.10.19',
         supportTestRunner            : '0.5',
 
-        constraintLayout             : '1.0.0-alpha4'
+        constraintLayout             : '1.0.0-alpha4',
+        flexboxLayout                : '0.2.2'
 ]
 
 ext.gradlePlugins = [
@@ -65,6 +66,7 @@ ext.libraries = [
         supportRecyclerView     : "com.android.support:recyclerview-v7:$versions.supportLibs",
         supportCardView         : "com.android.support:cardview-v7:$versions.supportLibs",
         constraintLayout        : "com.android.support.constraint:constraint-layout:$versions.constraintLayout",
+        flexboxLayout           : "com.google.android:flexbox:$versions.flexboxLayout",
 
         butterKnife             : "com.jakewharton:butterknife:$versions.butterKnife",
         butterKnifeCompiler     : "com.jakewharton:butterknife-compiler:$versions.butterKnife",
